fixing color change mistake

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   </style>
 </head>
 <body>
-	<div id="gold" class="block yellow accent-2">
-  <nav class="pushpin-demo-nav" data-target="yellow">
-    <div class="nav-wrapper yellow accent-2">
+	<div id="amber" class="block amber">
+  <nav class="pushpin-demo-nav" data-target="amber">
+    <div class="nav-wrapper amber">
       <div class="container">
         <a href="#" class="brand-logo">Gold</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -48,9 +48,9 @@
   </nav>
 </div>
 
-<div id="orange" class="block yellow darken-4">
-  <nav class="pushpin-demo-nav" data-target="yellow">
-    <div class="nav-wrapper yellow darken-4">
+<div id="orange" class="block yellow darken-3">
+  <nav class="pushpin-demo-nav" data-target="orange">
+    <div class="nav-wrapper orange darken-3">
       <div class="container">
         <a href="#" class="brand-logo">Bronze</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
