missing some css

--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@
     height: 100%;
   }
 
+
+  .pin-top {
+    position: relative;
+  }
+
+  
+  .pin-bottom {
+    position: relative;
+  }
+
+  
+  .pinned {
+    position: fixed !important;
+  }
+       
+
   </style>
 </head>
 <body>
@@ -48,9 +64,9 @@
   </nav>
 </div>
 
-<div id="orange" class="block yellow darken-3">
+<div id="orange" class="block orange darken-4">
   <nav class="pushpin-demo-nav" data-target="orange">
-    <div class="nav-wrapper orange darken-3">
+    <div class="nav-wrapper orange darken-4">
       <div class="container">
         <a href="#" class="brand-logo">Bronze</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
