--- a/gold.html
+++ b/gold.html
@@ -16,17 +16,23 @@
     <nav class="yellow accent-2">
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">Gold Medals</a>
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="#">Gold</a></li>
         <li><a href="silver.html">Silver</a></li>
         <li><a href="bronze.html">Bronze</a></li>
       </ul>
-    </div>
-
-  </nav>
-
-
+    	</div>
+	</nav>
 </div>
+
+	<ul class="side-nav" id="mobile-demo">
+
+		<li><a href="#">Gold</a></li>
+        <li><a href="silver.html">Silver</a></li>
+        <li><a href="bronze.html">Bronze</a></li>
+      </ul>
+      <br><br>
 
 
 
@@ -41,7 +47,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
  <script>
    $(document).ready(function(){
-  
+  	$(".button-collapse").sideNav({closeOnClick: true});
    
   });
  </script>
