--- a/silver.html
+++ b/silver.html
@@ -16,6 +16,7 @@
     <nav class="grey">
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">Silver Medals</a>
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="gold.html">Gold</a></li>
         <li><a href="#">Silver</a></li>
@@ -24,9 +25,15 @@
     </div>
 
   </nav>
-
-
 </div>
+
+<ul class="side-nav" id="mobile-demo">
+
+    <li><a href="gold.html">Gold</a></li>
+        <li><a href="#">Silver</a></li>
+        <li><a href="bronze.html">Bronze</a></li>
+      </ul>
+      <br><br>
 
 
 
@@ -41,6 +48,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
  <script>
    $(document).ready(function(){
+    $(".button-collapse").sideNav({closeOnClick: true});
   
    
   });
