sample mobile responsive map inserted

--- a/gold.html
+++ b/gold.html
@@ -34,6 +34,10 @@
       </ul>
       <br><br>
 
+<div class="container">
+	<!--Gold map google element goes here -->
+<img class="responsive-img" src="./assets/images/image.png">
+</div>
 
 
 
