--- a/silver.html
+++ b/silver.html
@@ -35,6 +35,11 @@
       </ul>
       <br><br>
 
+      <div class="container">
+        <!-- Silver goole map goes here -->
+        <img class="responsive-img" src="./assets/images/image.png">
+      </div>
+
 
 
 
