--- a/bronze.html
+++ b/bronze.html
@@ -37,6 +37,11 @@
       </ul>
       <br><br>
 
+      <div class="container">
+        <!-- bronze goolge map goes here -->
+        <img class="responsive-img" src="./assets/images/image.png">
+      </div>
+
 
 
 
