added seperate javascript files for each of the medal pages

--- a/silver.html
+++ b/silver.html
@@ -10,7 +10,24 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
+<style>
+#goldMap, #silverMap, #bronzeMap, .container {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  margin: auto;
+}
+/* Optional: Makes the sample page fill the window. */
 
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+</style>
+
+</head>
   <body>
   <div>
     <nav class="grey">
@@ -37,7 +54,8 @@
 
       <div class="container">
         <!-- Silver goole map goes here -->
-        <img class="responsive-img" src="./assets/images/image.png">
+        <div id="silverMap">
+        </div>
       </div>
 
 
@@ -58,5 +76,11 @@
    
   });
  </script>
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8moShpHaj8B7H9sTLMcayMf8J4RzzSE4&callback=initMap"
+  async defer></script>
+
+<script src="assets/javascript/silver.js"> </script>
+
 </body>
 </html>
