--- a/bronze.html
+++ b/bronze.html
@@ -10,7 +10,24 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
+<style>
+#goldMap, #silverMap, #bronzeMap, .container {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  margin: auto;
+}
+/* Optional: Makes the sample page fill the window. */
 
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+</style>
+
+</head>
   <body>
   <div>
     <nav class="yellow darken-4">
@@ -39,7 +56,8 @@
 
       <div class="container">
         <!-- bronze goolge map goes here -->
-        <img class="responsive-img" src="./assets/images/image.png">
+        <div id="bronzeMap">
+        </div>
       </div>
 
 
@@ -59,5 +77,11 @@
    
   });
  </script>
+
+ <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8moShpHaj8B7H9sTLMcayMf8J4RzzSE4&callback=initMap"
+  async defer></script>
+
+<script src="assets/javascript/bronze.js"> </script>
+
 </body>
 </html>
